# distributed-computing

./: LICENSE  Makefile  README.md
k8s/redis/: statefulset.yaml
redis/k8s/: redis-service.yaml
task-controller/: Dockerfile  Makefile  pyproject.toml  skaffold.yaml
task-controller/k8s/: task-controller-configmap.yaml  task-controller-deployment.yaml  task-controller-service.yaml
task-controller/src/: config.py  main.py  requirements.txt  utils.py
task-controller/src/job_controller/: job_config.py  spawn_job.py  utils.py
task-service/: Dockerfile  Makefile  pyproject.toml  requirements.txt  skaffold.yaml
task-service/k8s/: task-service-deployment.yaml
task-service/src/: main.py
task-service/src/api/v1/: task.py
task-service/src/core/: config.py  logger.py
task-service/src/models/: task.py
task-service/src/services/: task.py
