[tool.poetry]
name = "src"
version = "0.1.0"
description = "distributed task controller app"
authors = ["shpendnila <shpendnila7@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.2.0"
kubernetes = "^23.3.0"
shortuuid = "^1.0.8"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
