[tool.poetry]
name = "task-service"
version = "0.1.0"
description = ""
authors = ["shpendnila <shpendnila7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.6.7"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
